# quantworks-bitcoin

./: pyproject.toml  setup.py
quantworks/ext/bitcoincharts/: barfeed.py
quantworks/ext/bitstamp/: barfeed.py  broker.py  httpclient.py  livebroker.py  livefeed.py  wsclient.py
quantworks/ext/testcases/: bitstamp_test.py  btcharts_test.py  common.py
